--- a/mobile2fa/Linq2FA/app/src/main/res/layout/activity_main.xml
+++ b/mobile2fa/Linq2FA/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,9 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="sa.com.is.activity.MainActivity">
 
-    <TextView android:text="hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <FrameLayout
+        android:id="@+id/content_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
