--- a/mobile2fa/Linq2FA/app/src/main/res/layout/barcode_reading_step.xml
+++ b/mobile2fa/Linq2FA/app/src/main/res/layout/barcode_reading_step.xml
@@ -1,6 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/logoImg"
+        android:src="@drawable/logo"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_below="@id/logoImg"
+        android:orientation="vertical"
+        android:layout_height="match_parent">
+        <WebView
+            android:id="@+id/barcodewebView"
+            android:layout_width="match_parent"
+            android:layout_weight="3"
+            android:layout_height="match_parent"></WebView>
+
+        <Button
+            android:id="@+id/barcodebtn"
+            android:text="Scan Barcode"
+            android:layout_weight="0"
+            style="@style/RoundButton"
+            android:layout_marginTop="3dp"
+            android:gravity="center"
+            android:drawableLeft="@drawable/barcode"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="3dp"
+
+            android:layout_marginRight="3dp"
+            android:textAlignment="center" />
+
+    </LinearLayout>
+
+
+
+
+</RelativeLayout>
