--- a/mobile2fa/Linq2FA/app/src/main/res/layout/pin_password_fragment_layout.xml
+++ b/mobile2fa/Linq2FA/app/src/main/res/layout/pin_password_fragment_layout.xml
@@ -27,6 +27,7 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@id/txtbinpasswd"
         android:layout_width="wrap_content"
+        android:password="true"
         android:hint="Enter Your Pin Password"
         android:layout_height="wrap_content" />
 
