--- a/mobile2fa/Linq2FA/app/src/main/res/layout/otp_view_layout.xml
+++ b/mobile2fa/Linq2FA/app/src/main/res/layout/otp_view_layout.xml
@@ -16,14 +16,16 @@
             android:text="Account Name goes here"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16dp" />
+            android:textSize="25dp"
+            android:textStyle="bold|italic" />
 
         <TextView
             android:id="@+id/otp_value"
             android:text="OTP Value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="50dp" />
+            android:textSize="50dp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
