Implementing the System Manager

--- a/IMAPP/web/templates/masterLayout.xhtml
+++ b/IMAPP/web/templates/masterLayout.xhtml
@@ -55,7 +55,7 @@
                             <a href="Activate.xhtml">Activate</a>
                         </li>
                         <li>
-                            <a href="#">Verification</a>
+                            <a href="validate.xhtml">Verification</a>
                         </li>
                         <li>
                             <a href="#">Contact</a>
