--- a/mobile2fa/Linq2FA/app/src/main/res/menu/capture.xml
+++ b/mobile2fa/Linq2FA/app/src/main/res/menu/capture.xml
@@ -25,11 +25,11 @@
         android:icon="@android:drawable/ic_menu_recent_history"
         android:orderInCategory="2"
         android:showAsAction="withText|ifRoom"/>-->
-  <item android:id="@+id/menu_settings"
+  <!--<item android:id="@+id/menu_settings"
         android:title="@string/menu_settings"
         android:icon="@android:drawable/ic_menu_preferences"
         android:orderInCategory="3"
-        android:showAsAction="withText"/>
+        android:showAsAction="withText"/>-->
   <!--<item android:id="@+id/menu_help"
         android:title="@string/menu_help"
         android:icon="@android:drawable/ic_menu_help"
