--- a/mobile2fa/Linq2FA/app/src/main/res/layout/pin_password_fragment_layout.xml
+++ b/mobile2fa/Linq2FA/app/src/main/res/layout/pin_password_fragment_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:background="@android:color/white"
     android:layout_height="match_parent">
 
 
@@ -10,7 +11,7 @@
         android:layout_marginTop="75dp"
         android:id="@+id/pinimg"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/logo"
+        android:src="@drawable/globaltop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
