--- a/mobile2fa/Linq2FA/app/src/main/res/layout/pin_password_fragment_layout.xml
+++ b/mobile2fa/Linq2FA/app/src/main/res/layout/pin_password_fragment_layout.xml
@@ -35,7 +35,7 @@
     <Button
         android:id="@+id/pinBtn"
         android:layout_centerHorizontal="true"
-        android:text="Account Login"
+        android:text="App Login"
         android:drawableLeft="@drawable/login"
         android:layout_below="@id/pin_password_txt"
         android:layout_width="wrap_content"
