--- a/mobile2fa/Linq2FA/app/src/main/res/layout/pin_password_fragment_layout.xml
+++ b/mobile2fa/Linq2FA/app/src/main/res/layout/pin_password_fragment_layout.xml
@@ -4,16 +4,16 @@
     android:background="@android:color/white"
     android:layout_height="match_parent">
 
-
-
-
     <ImageView
         android:layout_marginTop="75dp"
         android:id="@+id/pinimg"
         android:layout_centerHorizontal="true"
+        android:layout_width="192dp"
+        android:layout_height="192dp"
+        android:scaleType="fitXY"
         android:src="@drawable/globaltop"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+
+         />
 
     <TextView
         android:id="@+id/txtbinpasswd"
@@ -30,6 +30,8 @@
         android:layout_width="wrap_content"
         android:password="true"
         android:hint="Enter Your Pin Password"
+        android:imeOptions="actionDone"
+        android:singleLine="true"
         android:layout_height="wrap_content" />
 
     <Button
