--- a/mobile2fa/Linq2FA/app/src/main/res/layout/pin_verification_step.xml
+++ b/mobile2fa/Linq2FA/app/src/main/res/layout/pin_verification_step.xml
@@ -8,11 +8,11 @@
     <ImageView
         android:layout_marginTop="75dp"
         android:id="@+id/logoImg"
-        android:layout_width="wrap_content"
+        android:layout_width="192dp"
         android:layout_centerHorizontal="true"
         android:src="@drawable/globaltop"
-        android:layout_marginBottom="25dp"
-        android:layout_height="wrap_content" />
+        android:layout_marginBottom="10dp"
+        android:layout_height="192dp" />
 
     <TextView
         android:id="@+id/txtbinpasswd"
@@ -20,6 +20,7 @@
         android:text="@string/pin_password_verify_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingLeft="5dp"
         android:password="false"
         android:textStyle="bold"
         android:textSize="16dp" />
