--- a/mobile2fa/Linq2FA/app/src/main/res/layout/otp_view_layout.xml
+++ b/mobile2fa/Linq2FA/app/src/main/res/layout/otp_view_layout.xml
@@ -17,7 +17,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25dp"
-            android:textStyle="bold|italic" />
+            android:textStyle="bold|italic"
+            android:layout_gravity="center_horizontal" />
 
         <TextView
             android:id="@+id/otp_value"
@@ -25,7 +26,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="50dp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_gravity="center_horizontal" />
 
     </LinearLayout>
 
