Finishing the entire system for Nadec

--- a/mobile2fa/Linq2FA/app/src/main/res/layout/pin_password_step.xml
+++ b/mobile2fa/Linq2FA/app/src/main/res/layout/pin_password_step.xml
@@ -33,7 +33,7 @@
         android:inputType="textPassword"
         android:hint="Choose a Pin Password"
         android:id="@+id/pinPassword"
-        />
+        android:singleLine="true" />
 
 
 </RelativeLayout>
