--- a/mobile2fa/Linq2FA/app/src/main/res/layout/pin_verification_step.xml
+++ b/mobile2fa/Linq2FA/app/src/main/res/layout/pin_verification_step.xml
@@ -32,7 +32,7 @@
         android:password="true"
         android:hint="Re-Enter Your Application PIN"
         android:id="@+id/pinPassword"
-        />
+        android:singleLine="true" />
 
 
 </RelativeLayout>
